// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipe Navigator matches snapshot 1`] = `
.c0 {
  width: 25vw;
  height: 95vh;
  padding: 20px;
  margin-top: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-y: scroll;
}

.c1 {
  font-size: 20px;
  list-style: none;
  padding: 5px;
  border-bottom: 1px solid;
}

.c2 {
  position: fixed;
  bottom: 30px;
  left: 23vw;
}

<div>
  <ul
    className="c0"
  >
    <li
      className="recipeItem-0  c1"
      onClick={[Function]}
    >
      recipe1
    </li>
    <li
      className="recipeItem-1  c1"
      onClick={[Function]}
    >
      recipe2
    </li>
  </ul>
  <div
    className="c2"
  />
</div>
`;

exports[`Recipe Navigator matches snapshot when child elements are passed 1`] = `
.c0 {
  width: 25vw;
  height: 95vh;
  padding: 20px;
  margin-top: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-y: scroll;
}

.c1 {
  font-size: 20px;
  list-style: none;
  padding: 5px;
  border-bottom: 1px solid;
}

.c2 {
  position: fixed;
  bottom: 30px;
  left: 23vw;
}

<div>
  <ul
    className="c0"
  >
    <li
      className="recipeItem-0  c1"
      onClick={[Function]}
    >
      recipe1
    </li>
    <li
      className="recipeItem-1  c1"
      onClick={[Function]}
    >
      recipe2
    </li>
  </ul>
  <div
    className="c2"
  >
    <h1>
      child element
    </h1>
  </div>
</div>
`;
